--- a/src/components/avatar/index.html
+++ b/src/components/avatar/index.html
@@ -8,6 +8,14 @@
             <div class="slider__inner-wrapper">
                 <div class="slider__slide">
                     <picture>
+                        <source srcset="/static/images/Antonina.jpg, /static/images/Antonina-2.jpg 2x" media="(min-width: 1024px)">
+                        <source srcset="/static/images/Antonina-tablet.jpg" media="(min-width: 768px) and (max-width: 1023px)">
+                        <source srcset="/static/images/Antonina-mobile.jpg" media="(max-width: 767px)">
+                        <img class="avatar__picture" srcset="/static/images/Antonina.jpg" alt="avatar-picture">
+                    </picture>
+                </div>
+                <div class="slider__slide">
+                    <picture>
                         <source srcset="/static/images/port.jpg, /static/images/port-2.jpg 2x" media="(min-width: 1024px)">
                         <source srcset="/static/images/port-tablet.jpg" media="(min-width: 768px) and (max-width: 1023px)">
                         <source srcset="/static/images/port-mobile.jpg" media="(max-width: 767px)">
