--- a/src/components/filter/index.html
+++ b/src/components/filter/index.html
@@ -6,43 +6,43 @@
                 <legend class="filter__block-name">Tags</legend>
                 <ul class="filter__block-tags-list">
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="blue">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="blue">
                         </label> 
                     </li> 
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="cian">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="cian">
                         </label>
                     </li>
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="yellow">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="yellow">
                         </label>
                     </li>
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="light-blue">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="light-blue">
                         </label>
                     </li>
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="orange">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="orange">
                         </label>
                     </li>
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="pink">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="pink">
                         </label>
                     </li>
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="purple">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="purple">
                         </label>
                     </li>
                     <li class="filter__block-tags-item">
-                        <label class="filter__block-label">               
-                            <input class="filter__block-checkbox" name="tags" type="checkbox" value="green">
+                        <label class="filter__block-tags-label">               
+                            <input class="filter__block-tags-checkbox" name="tags" type="checkbox" value="green">
                         </label>
                     </li>
                 </ul>   
@@ -75,19 +75,19 @@
                 <ul class="filter__block-comments-list">
                     <li class="filter__block-comments-item">
                         <label class="filter__block-comments-label">
-                            <input class="filter__block-comments-input" name="comments" type="checkbox" value="0">
+                            <input class="filter__block-comments-input hidden" name="comments" type="checkbox" value="0">
                             <span class="filter__block-comments-text">0</span>
                         </label>
                     </li>
                     <li class="filter__block-comments-item">
                         <label class="filter__block-comments-label">
-                            <input class="filter__block-comments-input" name="comments" type="checkbox" value="0-1">
+                            <input class="filter__block-comments-input hidden" name="comments" type="checkbox" value="0-1">
                             <span class="filter__block-comments-text">0-1</span>
                         </label>
                     </li>
                     <li class="filter__block-comments-item">
                         <label class="filter__block-comments-label">
-                            <input class="filter__block-comments-input" name="comments" type="checkbox" value="1-50">
+                            <input class="filter__block-comments-input hidden" name="comments" type="checkbox" value="1-50">
                             <span class="filter__block-comments-text">1-50</span>
                         </label>
                     </li>
@@ -133,7 +133,10 @@
                     </li>
                 </ul>
             </fieldset>
-        </form>        
-        <button class="filter__button">Reset</button>
+            <fieldset class="filter__block-reset">
+                <legend class="filter__block-name filter__block-name-pale">reset form</legend>
+                <button class="filter__button button">Reset</button>
+            </fieldset>            
+        </form>                
     </div>
 </section>
