--- a/src/components/search-bar/index.html
+++ b/src/components/search-bar/index.html
@@ -1,6 +1,6 @@
 <section class="search container">
     <form class="search__form" action="/">
         <input class="search__input" type="text" name="search">
-        <button class="search__button" type="submit">Search</button>
+        <button class="search__button button" type="submit">Search</button>
     </form>
 </section>
