--- a/src/components/blog-pagination/index.html
+++ b/src/components/blog-pagination/index.html
@@ -1,4 +1,8 @@
 <section class="container">
+    <!-- <div>
+        <h1>Результат поиска</h1>
+        <pre class="result_js"></pre>
+    </div> -->
     <div class="blog__pagination">
         <button class="backward-button blog__pagination-vector">
             <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -9,28 +13,28 @@
         </button>
         <ul class="blog__pagination-list">
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">1</button>
+                <a href="?page=1" class="blog__pagination-button link_js">1</a>
             </li>
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">2</button>
+                <a href="?page=2" class="blog__pagination-button link_js">2</a>
             </li>
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">3</button>
+                <a href="?page=3" class="blog__pagination-button link_js">3</a>
             </li>
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">4</button>
+                <a href="?page=4" class="blog__pagination-button link_js">4</a>
             </li>
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">5</button>
+                <a href="?page=5" class="blog__pagination-button link_js">5</a>
             </li>
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">6</button>
+                <a href="?page=6" class="blog__pagination-button link_js">6</a>
             </li>
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">7</button>
+                <a href="?page=7" class="blog__pagination-button link_js">7</a>
             </li>
             <li class="blog__pagination-item">
-                <button class="blog__pagination-button">8</button>
+                <a href="?page=8" class="blog__pagination-button link_js">8</a>
             </li>
         </ul>
         <button class="forward-button blog__pagination-vector">
